Update fix-scrollbar-chrome.css
scrollbar variants
+ default scrollbar
+ slim scrollbar

--- a/src/css/fix-scrollbar-chrome.css
+++ b/src/css/fix-scrollbar-chrome.css
@@ -1,8 +1,36 @@
-::-webkit-scrollbar {
+/** DEFAULT SCROLLBAR */
+
+*::-webkit-scrollbar {
+    width: 6px;
+}
+
+/* Handle portion of the scrollbar */
+*::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 6px;
+    border: 2px solid var(--color-background-900);
+}
+
+/* Track (the area on which the handle moves) */
+*::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+/* Handle on hover */
+*::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
+
+
+
+/** SLIM SCROLLBAR */
+
+.scrollbar-slim::-webkit-scrollbar {
     width: 8px;
 }
 
-::-webkit-scrollbar-thumb {
+.scrollbar-slim::-webkit-scrollbar-thumb {
     border-radius: 8px;
     border: 3px solid transparent;
     background-clip: content-box;
@@ -10,17 +38,3 @@
 }
 
 
-
-/* FOR ROUNDED CORNERS
-::-webkit-scrollbar-track {
-    border-radius: 8px;
-}
-*/
-
-/* Dark mode
-@media (prefers-color-scheme: dark) {
-    ::-webkit-scrollbar-track:hover {
-        background-color: #202020;
-    }    
-}
-*/
